--- a/CSharp/BubbleSortCS/BubbleSortCS/BubbleSortCS.csproj
+++ b/CSharp/BubbleSortCS/BubbleSortCS/BubbleSortCS.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoFixture" Version="4.18.0" />
     <PackageReference Include="BenchmarkDotNet" Version="0.13.5" />
   </ItemGroup>
 
