--- a/CPP/BubbleSortCpp/BubbleSortCpp/BubbleSortCpp.vcxproj
+++ b/CPP/BubbleSortCpp/BubbleSortCpp/BubbleSortCpp.vcxproj
@@ -129,6 +129,10 @@
   <ItemGroup>
     <ClCompile Include="BubbleSortCpp.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Library Include="..\benchmark.lib" />
+    <Library Include="..\benchmark_main.lib" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
