--- a/CPP/BubbleSortCpp/BubbleSortCpp/BubbleSortCpp.vcxproj
+++ b/CPP/BubbleSortCpp/BubbleSortCpp/BubbleSortCpp.vcxproj
@@ -70,6 +70,10 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <LibraryPath>C:\git\CppBenchmark\bin;$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\git\CppBenchmark\include;C:\git\CppBenchmark\include\benchmark;C:\git\CppBenchmark\bin;$(IncludePath)</IncludePath>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
@@ -108,6 +112,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>cppbenchmark;cppbenchmark.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -128,10 +133,6 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="BubbleSortCpp.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <Library Include="..\benchmark.lib" />
-    <Library Include="..\benchmark_main.lib" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
